--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-input/mask": "^1.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-international-phone": "^3.1.2",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
