--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://vlad-lis.github.io/getshoptv-task/",
   "name": "getshoptv-task",
   "private": true,
   "version": "0.0.0",
